Copy over separator from old css, fixes broken spacing in some blogs

--- a/source/stylesheets/screen.css
+++ b/source/stylesheets/screen.css
@@ -393,6 +393,12 @@ article p {
     margin-bottom: 1.5rem;
 }
 
+article .separator {
+  content: "\2022 ";
+  padding: 0;
+  display: inline-block;
+}
+
 article .pre-quote {
     background: #fdf6e3 url('/images/noise.png?1433967138') top left;
     -moz-border-radius: 0.4em;
